modularizing device drivers

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/usbd"]
 	path = src/usbd
 	url = https://github.com/wiredopposite/usbd.git
+[submodule "lib/tusb_xinput"]
+	path = lib/tusb_xinput
+	url = https://github.com/Ryzee119/tusb_xinput.git
