--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,18 @@
 cmake_minimum_required(VERSION 3.12)
 
+set(CMAKE_BUILD_TYPE Release)
 message("Build type: \"${CMAKE_BUILD_TYPE}\"")
 
-# Project name
 set(NAME OGX-Mini)
 
-# Board type
 set(PICO_BOARD none)
 
 # Fixes that allow some MCH2022 badges with a slowly starting oscillator to boot properly
-add_compile_definitions(PICO_BOOT_STAGE2_CHOOSE_GENERIC_03H=1 PICO_XOSC_STARTUP_DELAY_MULTIPLIER=64)
+# add_compile_definitions(PICO_BOOT_STAGE2_CHOOSE_GENERIC_03H=1 PICO_XOSC_STARTUP_DELAY_MULTIPLIER=64)
 
-# SDK
+# add_compile_options(-Wno-unused-parameter -Wno-unused-variable -Wno-missing-field-initializers -Wno-unused-function)
+add_compile_options(-Wno-missing-field-initializers)
+
 include($ENV{PICO_SDK_PATH}/pico_sdk_init.cmake)
 
 project(${NAME} C CXX ASM)
@@ -22,66 +23,48 @@ if (PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
     message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
 endif()
 
-set(PICO_PIO_USB_PATH "${CMAKE_CURRENT_LIST_DIR}/lib/Pico-PIO-USB")
-set(PICO_TINYUSB_PATH "${CMAKE_CURRENT_LIST_DIR}/lib/tinyusb")
-set(TUSB_XINPUT_PATH "${CMAKE_CURRENT_LIST_DIR}/lib/tusb_xinput")
-add_subdirectory(${TUSB_XINPUT_PATH} xinput_host)
+set(ROOT ${CMAKE_CURRENT_LIST_DIR})
+
+set(PICO_PIO_USB_PATH ${ROOT}/lib/Pico-PIO-USB)
+set(PICO_TINYUSB_PATH ${ROOT}/lib/tinyusb)
+set(TUSB_GAMEPAD_PATH ${ROOT}/lib/tusb_gamepad)
+set(XINPUT_HOST_PATH ${ROOT}/lib/tusb_xinput)
 
 pico_sdk_init()
 
-add_subdirectory(lib/Pico-PIO-USB)
-add_subdirectory(lib)
+# add_subdirectory(${ROOT}/lib)
+add_subdirectory(${ROOT}/lib/CRC32 CRC32)
+add_subdirectory(${XINPUT_HOST_PATH} xinput_host)
+add_subdirectory(${PICO_PIO_USB_PATH})
+add_subdirectory(${TUSB_GAMEPAD_PATH})
+target_include_directories(tusb_gamepad PRIVATE ${ROOT}/src) # so tusb_gamepad can see tusb_config.h
 
+set(SRC_DIR ${ROOT}/src)
 file(GLOB_RECURSE SOURCES 
-"src/main.cpp"
-"src/input_mode.cpp"
-"src/Gamepad.cpp"
+    ${SRC_DIR}/main.cpp
+    ${SRC_DIR}/input_mode.cpp
 
-"src/utilities/log.cpp"
-
-"src/usbh/tusb_host_manager.cpp"
-"src/usbh/tusb_host.cpp"
-"src/usbh/n64usb/N64USB.cpp"
-"src/usbh/ps3/Dualshock3.cpp"
-"src/usbh/ps3/DInput.cpp"
-"src/usbh/ps4/Dualshock4.cpp"
-"src/usbh/ps5/Dualsense.cpp"
-"src/usbh/psclassic/PSClassic.cpp"
-"src/usbh/switch/SwitchPro.cpp"
-"src/usbh/switch/SwitchWired.cpp"
-"src/usbh/xinput/XInput.cpp"
-"src/usbh/shared/hid_class_driver.c"
-"src/usbh/shared/scaling.cpp" 
-
-"src/usbd/usbdriver.cpp"
-"src/usbd/drivermanager.cpp"
-"src/usbd/drivers/shared/driverhelper.h"
-"src/usbd/drivers/shared/scaling.cpp"
-"src/usbd/drivers/dinput/DInputDriver.cpp"
-# "src/usbd/drivers/hid/HIDDriver.cpp"
-# "src/usbd/drivers/ps3/PS3Driver.cpp"
-"src/usbd/drivers/psclassic/PSClassicDriver.cpp"
-"src/usbd/drivers/switch/SwitchDriver.cpp"
-"src/usbd/drivers/usbserial/USBSerialDriver.cpp"
-"src/usbd/drivers/xinput/XInputDriver.cpp"
-"src/usbd/drivers/xboxog/XboxOriginalDriver.cpp"
-"src/usbd/drivers/xboxog/xid/xid.c"
-"src/usbd/drivers/xboxog/xid/xid_driver.c"
-"src/usbd/drivers/xboxog/xid/xid_gamepad.c"
-"src/usbd/drivers/xboxog/xid/xid_remote.c"
-"src/usbd/drivers/xboxog/xid/xid_steelbattalion.c"
+    ${SRC_DIR}/usbh/tusb_host_manager.cpp
+    ${SRC_DIR}/usbh/tusb_host.cpp
+    ${SRC_DIR}/usbh/n64usb/N64USB.cpp
+    ${SRC_DIR}/usbh/ps3/Dualshock3.cpp
+    ${SRC_DIR}/usbh/ps3/DInput.cpp
+    ${SRC_DIR}/usbh/ps4/Dualshock4.cpp
+    ${SRC_DIR}/usbh/ps5/Dualsense.cpp
+    ${SRC_DIR}/usbh/psclassic/PSClassic.cpp
+    ${SRC_DIR}/usbh/switch/SwitchPro.cpp
+    ${SRC_DIR}/usbh/switch/SwitchWired.cpp
+    ${SRC_DIR}/usbh/xinput/XInput.cpp
+    ${SRC_DIR}/usbh/shared/hid_class_driver.c
+    ${SRC_DIR}/usbh/shared/scaling.cpp
 )
 
 # Firmware
-add_executable(${NAME}
-${SOURCES}
-    )
+add_executable(${NAME} ${SOURCES})
 
 target_include_directories(${NAME} PUBLIC
-        ${CMAKE_CURRENT_LIST_DIR}/src ${CMAKE_CURRENT_LIST_DIR}/lib)
-
-include_directories(
-lib/)
+        ${ROOT}/src 
+        ${ROOT}/lib)
 
 target_link_libraries(${NAME}
     pico_stdlib
@@ -102,6 +85,100 @@ target_link_libraries(${NAME}
     CRC32
     cmsis_core
     xinput_host
+    tusb_gamepad
 )
 
 pico_add_extra_outputs(${NAME})
+
+# cmake_minimum_required(VERSION 3.12)
+
+# message("Build type: \"${CMAKE_BUILD_TYPE}\"")
+
+# # Project name
+# set(NAME OGX-Mini)
+
+# # Board type
+# set(PICO_BOARD none)
+
+# # Fixes that allow some MCH2022 badges with a slowly starting oscillator to boot properly
+# add_compile_definitions(PICO_BOOT_STAGE2_CHOOSE_GENERIC_03H=1 PICO_XOSC_STARTUP_DELAY_MULTIPLIER=64)
+
+# # SDK
+# include($ENV{PICO_SDK_PATH}/pico_sdk_init.cmake)
+
+# project(${NAME} C CXX ASM)
+# set(CMAKE_C_STANDARD 11)
+# set(CMAKE_CXX_STANDARD 17)
+
+# if (PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
+#     message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
+# endif()
+
+# set(PICO_PIO_USB_PATH "${CMAKE_CURRENT_LIST_DIR}/lib/Pico-PIO-USB")
+# set(PICO_TINYUSB_PATH "${CMAKE_CURRENT_LIST_DIR}/lib/tinyusb")
+# set(TUSB_XINPUT_PATH "${CMAKE_CURRENT_LIST_DIR}/lib/tusb_xinput")
+# set(TUSB_GAMEPAD_PATH "${CMAKE_CURRENT_LIST_DIR}/lib/tusb_gamepad")
+
+
+# pico_sdk_init()
+
+# add_subdirectory(${TUSB_XINPUT_PATH} xinput_host)
+# add_subdirectory(${TUSB_GAMEPAD_PATH} tusb_gamepad)
+# add_subdirectory(${PICO_PIO_USB_PATH} pico_pio_usb)
+# add_subdirectory(lib)
+# target_include_directories(tusb_gamepad PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src) # so tusb_gamepad can see tusb_config.h
+
+
+# file(GLOB_RECURSE SOURCES 
+# "src/main.cpp"
+# "src/input_mode.cpp"
+
+# "src/usbh/tusb_host_manager.cpp"
+# "src/usbh/tusb_host.cpp"
+# "src/usbh/n64usb/N64USB.cpp"
+# "src/usbh/ps3/Dualshock3.cpp"
+# "src/usbh/ps3/DInput.cpp"
+# "src/usbh/ps4/Dualshock4.cpp"
+# "src/usbh/ps5/Dualsense.cpp"
+# "src/usbh/psclassic/PSClassic.cpp"
+# "src/usbh/switch/SwitchPro.cpp"
+# "src/usbh/switch/SwitchWired.cpp"
+# "src/usbh/xinput/XInput.cpp"
+# "src/usbh/shared/hid_class_driver.c"
+# "src/usbh/shared/scaling.cpp" 
+# )
+
+# # Firmware
+# add_executable(${NAME}
+# ${SOURCES}
+#     )
+
+# target_include_directories(${NAME} PUBLIC
+#         ${CMAKE_CURRENT_LIST_DIR}/src ${CMAKE_CURRENT_LIST_DIR}/lib)
+
+# include_directories(
+# lib/)
+
+# target_link_libraries(${NAME}
+#     pico_stdlib
+#     pico_unique_id
+#     pico_multicore
+#     hardware_watchdog
+#     hardware_flash
+#     hardware_sync
+#     hardware_uart
+#     hardware_pio
+#     hardware_pwm
+#     hardware_adc
+#     hardware_i2c
+#     tinyusb_device
+#     tinyusb_board
+#     tinyusb_host
+#     pico_pio_usb
+#     CRC32
+#     cmsis_core
+#     xinput_host
+#     tusb_gamepad
+# )
+
+# pico_add_extra_outputs(${NAME})
