--- a/Firmware/RP2040/.vscode/settings.json
+++ b/Firmware/RP2040/.vscode/settings.json
@@ -116,5 +116,15 @@
         "flash.h": "c",
         "uart_bridge.h": "c",
         "usbh.h": "c"
-    }
+    },
+    "cmake.buildEnvironment": {
+        "PICO_SDK_PATH": "C:/Programming/pico-sdk"
+    },
+    "cmake.environment": {
+        "PICO_SDK_PATH": "C:/Programming/pico-sdk"
+    },
+    "cmake.configureArgs": [
+        "-DOGXM_BOARD=EXTERNAL_4CH",
+        "-DMAX_GAMEPADS=4"
+    ]
 }
