--- a/Firmware/RP2040/.vscode/settings.json
+++ b/Firmware/RP2040/.vscode/settings.json
@@ -7,7 +7,7 @@
         "PICO_SDK_PATH": "C:/Programming/pico-sdk"
     },
     "cmake.configureArgs": [
-        "-DOGXM_BOARD=W_ESP32",
+        "-DOGXM_BOARD=PI_PICO2",
         "-DMAX_GAMEPADS=1"
     ],
     "files.associations": {
