--- a/Firmware/RP2040/.vscode/settings.json
+++ b/Firmware/RP2040/.vscode/settings.json
@@ -2,7 +2,7 @@
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
 
     "cmake.configureArgs": [
-        "-DOGXM_BOARD=PI_PICOW",
+        "-DOGXM_BOARD=ADA_FEATHER",
         "-DMAX_GAMEPADS=1"
     ],
     
