--- a/Firmware/RP2040/CMakeLists.txt
+++ b/Firmware/RP2040/CMakeLists.txt
@@ -146,6 +146,12 @@ elseif(OGXM_BOARD STREQUAL "PICO_ESP32")
         add_definitions(-DOGXM_ESP32_RETAIL)
     endif()
 
+elseif(OGXM_BOARD STREQUAL "RP2350_USB_A")
+    set(EN_USB_HOST TRUE)
+    set(PICO_PLATFORM rp2350)
+    set(EN_RGB TRUE)
+    set(FLASH_SIZE_MB 2)
+
 else()
     message(FATAL_ERROR "Invalid OGXM_BOARD value. See options in src/board_config.h")
 
