Add Blueretro support, fix latency bug

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Firmware/external/libfixmath"]
 	path = Firmware/external/libfixmath
 	url = https://github.com/PetteriAimonen/libfixmath.git
+[submodule "Firmware/ESP32_Blueretro"]
+	path = Firmware/ESP32_Blueretro
+	url = https://github.com/wiredopposite/BlueRetro.git
